Added Mobile Responsive Design to Webpage

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </head>
 
     <body>
-        <header class="p-5 mb-4">
-            <h1 class="display-3">Work Day Scheduler</h1>
-            <p class="lead">A simple calendar app for scheduling your work day</p>
-            <p id="currentDay" class="lead"></p>
+        <header class="mb-4">
+            <h1 id="work-day-scheduler-heading" class="display-3 align-center">Work Day Scheduler</h1>
+            <p class="lead align-center">A simple calendar app for scheduling your work day</p>
+            <p id="current-day align-center" class="lead"></p>
         </header>
         <section class="container-fluid px-5">
 
@@ -46,7 +46,7 @@
 
             <p id="event-saved-confirmation" class="opacity-0">Event added to <span>localstorage</span>✔️</p>
             <section id="hour-9" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">9 AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">9AM</p>
                 <textarea class="col-8 col-md-10 description past" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                     <i class="fas fa-save" aria-hidden="true"></i>
@@ -55,7 +55,7 @@
 
             <!-- Example of a present time block. The "present" class adds a red background color. -->
             <section id="hour-10" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">10 AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">10AM</p>
                 <textarea class="col-8 col-md-10 description present" rows="3" > </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
@@ -64,49 +64,49 @@
 
             <!-- Example of a future time block. The "future" class adds a green background color. -->
             <section id="hour-11" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">11 AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">11AM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-12" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">12 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">12PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-13" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">1 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">1PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-14" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">2 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">2PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-15" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">3 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">3PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-16" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">4 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">4PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-17" class="row time-block">
-                <p class="col-2 col-md-1 hour text-center py-3 zero-bottom-margin">5 PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">5PM</p>
                 <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
