Added Time and Date Functionality and Refactored Event Saving Logic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header class="mb-4">
             <h1 id="work-day-scheduler-heading" class="display-3 align-center">Work Day Scheduler</h1>
             <p class="lead align-center">A simple calendar app for scheduling your work day</p>
-            <p id="current-day align-center" class="lead"></p>
+            <p id="current-day" class="lead align-center"></p>
         </header>
         <section class="container-fluid px-5">
 
@@ -44,10 +44,10 @@
 
             <!-- Example of a past time block. The "past" class adds a gray background color. -->
 
-            <p id="event-saved-confirmation" class="opacity-0">Event added to <span>localstorage</span>✔️</p>
+            <p id="event-saved-confirmation" class="opacity-0"><span id="event">Event</span> <span id="add-removal">added to</span> <span id="local-storage-text">localstorage</span><span id="emoji">✔️</span>.</p>
             <section id="hour-9" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">9AM</p>
-                <textarea class="col-8 col-md-10 description past" rows="3"> </textarea>
+                <textarea id="hour-9-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -56,7 +56,7 @@
             <!-- Example of a present time block. The "present" class adds a red background color. -->
             <section id="hour-10" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">10AM</p>
-                <textarea class="col-8 col-md-10 description present" rows="3" > </textarea>
+                <textarea id="hour-10-textarea" class="col-8 col-md-10 description" rows="3" > </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -65,49 +65,49 @@
             <!-- Example of a future time block. The "future" class adds a green background color. -->
             <section id="hour-11" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">11AM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-11-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-12" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">12PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-12-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-13" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">1PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-13-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-14" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">2PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-14-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-15" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">3PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-15-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-16" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">4PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-16-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
-            <section id="hour-17" class="row time-block">
+            <section id="hour-17"  class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">5PM</p>
-                <textarea class="col-8 col-md-10 description future" rows="3"> </textarea>
+                <textarea id="hour-17-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -119,7 +119,7 @@
             integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
             crossorigin="anonymous">
         </script>
-
+        <script> src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"</script>
         <script src="Assets/javascript/script.js"></script>
     </body>
 </html>
