Added README and Finalized the Look of the Application

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <p id="event-saved-confirmation" class="opacity-0"><span id="event">Event</span> <span id="add-removal">added to</span> <span id="local-storage-text">localstorage</span><span id="emoji">✔️</span>.</p>
             <section id="hour-9" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">9AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding zero-bottom-margin">9AM</p>
                 <textarea id="hour-9-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                     <i class="fas fa-save" aria-hidden="true"></i>
@@ -55,7 +55,7 @@
 
             <!-- Example of a present time block. The "present" class adds a red background color. -->
             <section id="hour-10" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">10AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding zero-bottom-margin">10AM</p>
                 <textarea id="hour-10-textarea" class="col-8 col-md-10 description" rows="3" > </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
@@ -64,49 +64,49 @@
 
             <!-- Example of a future time block. The "future" class adds a green background color. -->
             <section id="hour-11" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">11AM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">11AM</p>
                 <textarea id="hour-11-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-12" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">12PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">12PM</p>
                 <textarea id="hour-12-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-13" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">1PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">1PM</p>
                 <textarea id="hour-13-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-14" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">2PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">2PM</p>
                 <textarea id="hour-14-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-15" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">3PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">3PM</p>
                 <textarea id="hour-15-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-16" class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">4PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding">4PM</p>
                 <textarea id="hour-16-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
             <section id="hour-17"  class="row time-block">
-                <p class="col-2 col-small col-md-1 hour text-center py-3 zero-bottom-margin">5PM</p>
+                <p class="col-2 col-small col-md-1 hour text-center custom-padding bottom-border">5PM</p>
                 <textarea id="hour-17-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
