--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+        <!-- The final stylesheet here is the one I wrote, but the other three are stylesheets from the web that I 
+        didn't create. -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -20,31 +23,42 @@
             href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="Assets/css/style.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
         <title>Work Day Scheduler</title>
-    </head>
 
+        <!-- Similarly, the last script is the one I wrote, but the other three are from the web and include jQuery and Day.js.-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+            crossorigin="anonymous" defer>
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" defer> </script>
+
+        <!-- The reason the last script is not deferred is that a comment in the starter code said to wrap this script in a call to jQuery to prevent
+        it from executing until the page loaded.  Thus, I figured that one of the two methods of deferment was unnecessary.  -->
+        <script src="assets/javascript/script.js"></script>
+    </head>
     <body>
         <header class="mb-4">
-            <h1 id="work-day-scheduler-heading" class="display-3 align-center">Work Day Scheduler</h1>
-            <p class="lead align-center">A simple calendar app for scheduling your work day</p>
+            <h1 id="work-day-scheduler-heading font-weight-bold" class="display-3 align-center">Work Day Scheduler</h1>
+            <p class="lead align-left col-12 col-md-10 col-lg-8 mx-auto">This is a simple calendar app for scheduling your work day. <span class="future">Green</span> boxes represent hours in the future.
+                A <span class="present">red</span> box represents the present hour.  <span class="past">Grey</span> boxes represent hours in the past.  To use the page, enter or edit text in
+                an hour box and click the blue Save button to the right of it.</p>
             <p id="current-day" class="lead align-center"></p>
         </header>
+        
+        <!-- This <p> tag confirms when an event has been added to or removed from local storage.  The reason I am using so 
+            many spans is so that I can change the text of each span individually with JavaScript. -->
+        <p id="event-saved-confirmation" class="opacity-0 align-center margin-bottom lead col-12">
+            <span id="event">Event</span> 
+            <span id="add-removal">added to</span> 
+            <span id="local-storage-text">localstorage</span>
+            <span id="emoji">✔️</span>.
+        </p>
+
         <section class="container-fluid px-5">
 
-            <!-- Use class for "past", "present", and "future" to apply styles to the
-            time-block divs accordingly. The javascript will need to do this by
-            adding/removing these classes on each div by comparing the hour in the
-            id to the current hour. The html provided below is meant to be an example
-            demonstrating how the css provided can be leveraged to create the
-            desired layout and colors. The html below should be removed or updated
-            in the finished product. Remember to delete this comment once the
-            code is implemented.
-            -->
-
-            <!-- Example of a past time block. The "past" class adds a gray background color. -->
-
-            <p id="event-saved-confirmation" class="opacity-0"><span id="event">Event</span> <span id="add-removal">added to</span> <span id="local-storage-text">localstorage</span><span id="emoji">✔️</span>.</p>
+            <!-- The many sections that come next represent the hours of the work day. -->
             <section id="hour-9" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center custom-padding zero-bottom-margin">9AM</p>
                 <textarea id="hour-9-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -52,8 +66,6 @@
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
-
-            <!-- Example of a present time block. The "present" class adds a red background color. -->
             <section id="hour-10" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center custom-padding zero-bottom-margin">10AM</p>
                 <textarea id="hour-10-textarea" class="col-8 col-md-10 description" rows="3" > </textarea>
@@ -61,8 +73,6 @@
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
             </section>
-
-            <!-- Example of a future time block. The "future" class adds a green background color. -->
             <section id="hour-11" class="row time-block">
                 <p class="col-2 col-small col-md-1 hour text-center custom-padding">11AM</p>
                 <textarea id="hour-11-textarea" class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -113,13 +123,5 @@
                 </button>
             </section>
         </section>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-            crossorigin="anonymous">
-        </script>
-        <script> src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"</script>
-        <script src="Assets/javascript/script.js"></script>
     </body>
 </html>
